# NuMaker-mbed-ce-AWS-IoT-CSDK-OTA-example

./: .gitmodules  CMakeLists.txt  README.md  mbed_app.json5  mbed_app_bg96.json5
demo_ota_mqtt/COMPONENT_AWSIOT_PKCS11/: aws_credentials_provision_kvstore.cpp
pre-main/provision/COMPONENT_AWSIOT_PKCS11/: provision_kvstore.cpp
targets/TARGET_NUVOTON/: platform_entropy.cpp
